Increased --width on .items to prevent clipping on fb mobile

--- a/styles.css
+++ b/styles.css
@@ -116,8 +116,8 @@ body {
 
     input[class|="item"] {
         --height: 2.5rem;
-        --width: 3.75em;
-
+        --width: 4em;
+        
         height: var(--height);
         width: var(--width);
         position: absolute;
